--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
     "nuxt": "^3.11.1",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
